[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/godot-rollback-netcode/NetworkTimer.gd" type="Script" id=1]
[ext_resource path="res://mods/core/modes/deathmatch/DeathmatchPlayerManager.gd" type="Script" id=2]

[node name="DeathmatchPlayerManager" type="Node"]
script = ExtResource( 2 )

[node name="RespawnTimer" type="Node" parent="."]
script = ExtResource( 1 )
one_shot = true
wait_ticks = 60

[node name="WeaponTimeoutTimer" type="Node" parent="."]
script = ExtResource( 1 )
one_shot = true
wait_ticks = 30

[node name="WeaponWarningTimer" type="Node" parent="."]
script = ExtResource( 1 )
one_shot = true
wait_ticks = 30

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="WeaponTimeoutTimer" to="." method="_on_WeaponTimeoutTimer_timeout"]
[connection signal="timeout" from="WeaponWarningTimer" to="." method="_on_WeaponWarningTimer_timeout"]
